--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "utils.js"
   ],
   "main": "index.js",
+  "types": "types.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/dcousens/coinselect.git"
